src/objects/Incentive_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Data_Field_Name__c</fullName>
        <label>Data Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID_Field_Name__c</fullName>
        <label>Employee ID Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Name__c</fullName>
        <label>Function Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incentive_Plan_Name__c</fullName>
        <label>Incentive Plan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Data_From__c</fullName>
        <label>Use Data From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Incentive Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Incentive Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>